bug fix causing terminal editor to overflow the header

--- a/app/css/markdown.css
+++ b/app/css/markdown.css
@@ -87,7 +87,7 @@ h6{
 .markdown-body blockquote {
   color: #666666;
   margin: 0;
-  padding-left: 3em;
+  padding-left: 1em;
   border-left: 0.5em #EEE solid;
 }
 
@@ -97,6 +97,7 @@ h6{
 
 .markdown-body blockquote:after {
   content: '';
+  margin-left: 0px;
 }
 
 hr {
